[fix] Till About Pages

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "node-sass": "^4.11.0"
   }
 }
